WP Movie Ratings changelog:
===========================

HEAD
- full compatibility with Wordpress 2.7 (this unfortunately breaks compatibility with older versions of Wordpress)
- fixed: when 'only_rated' or 'only_unrated' option was used the 'count' argument the for wp_movie_ratings_show() function was ignored

Release 1.5 (2008-05-18)
- added option to add movies without rating them (to create a list of owned just not yet seen dvds, for example) (only through the administration panel)
- added option to select all 'only_rated' or 'only_not_rated' movies using the wp_movie_ratings_show() function call
- char_limit option can now be passed as a parameter to the wp_movie_ratings_show() function call
- fixed problems making the movie reviews pages non XHTML compliant
- fixed error which prevented certain users from activating the plugin (the database table was not created)
- fixed XHTML validation error in the bookmarklet

Release 1.4 (2006-11-18)
- fixed lots of rendering issues (problems in IE, Blue-k2 theme, Golden Gray theme, reviews not expanding, etc.)
- completely rewritten encoding module, so now international characters as well as HTML should work correctly
- fix for Markdown markup - you can now use the alternate tag: <!--wp_movie_ratings_page--> to create a movie ratings page
- new feature: if no imdb link is given, the plugin will not look for the movie's title on imdb. As a drawback, there can be now movies without imdb links (and without titles...)
- new feature: ability to edit imdb links for already rated movies
- new feature: added pagination in page mode (so movie reviews can now span among several pages)
- added option to disable pingerati.net pinging
- added option to highlight top rated movies
- added link from the recently rated movies list to the page with all movie ratings
- movies are now grouped together by month when sorting by view date in page mode
- added default movies sorting options for page mode