@@ -4,6 +4,7 @@ WP Movie Ratings changelog:
 HEAD
 - full compatibility with Wordpress 2.7 (this unfortunately breaks compatibility with older versions of Wordpress)
 - fixed: when 'only_rated' or 'only_unrated' option was used the 'count' argument the for wp_movie_ratings_show() function was ignored
+- removed automatic pingerati.net pinging (pingerati.net is AWOL)
 
 Release 1.5 (2008-05-18)
 - added option to add movies without rating them (to create a list of owned just not yet seen dvds, for example) (only through the administration panel)
